--- a/Shared Preferences/app/src/main/res/layout/activity_main.xml
+++ b/Shared Preferences/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools = "http://schemas.android.com/tools"
-    android:layout_width = "match_parent"
-    android:layout_height = "match_parent"
-    android:layout_margin = "16dp"
-    android:orientation = "vertical"
-    tools:context = ".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
+    tools:context=".MainActivity">
+
     <EditText
-        android:id = "@+id/edit_text"
-        android:layout_width = "match_parent"
-        android:layout_height = "wrap_content"
-        android:layout_gravity = "center"
-        android:hint = "Enter something to pass"
-        android:inputType = "text" />
+        android:id="@+id/ed1"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:gravity="center"
+        android:ems="10"
+        android:hint="Username"
+        android:inputType="text"
+        android:textColorHint="#757575" />
+
+    <EditText
+        android:id="@+id/ed2"
+        android:layout_width="match_parent"
+        android:layout_height="68dp"
+        android:gravity="center"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:textColorHint="#757575" />
+
     <Button
-        android:id = "@+id/button"
-        android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
-        android:layout_gravity = "center"
-        android:layout_marginTop = "16dp"
-        android:text = "Next" />
+        android:id="@+id/button"
+        android:layout_width="226dp"
+        android:layout_height="wrap_content"
+        android:text="Login" />
+
 
 </LinearLayout>
