--- a/Implicit_Intent/app/src/main/res/layout/activity_main.xml
+++ b/Implicit_Intent/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,11 @@
         android:layout_width="226dp"
         android:layout_height="wrap_content"
         android:text="Launch Map" />
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="226dp"
+        android:layout_height="wrap_content"
+        android:text="Launch Mail" />
 
 
 </LinearLayout>
